syntax = "proto3";

package stocktrading;
option java_multiple_files = true;
option java_package = "com.javatechie.grpc";
option java_outer_classname = "StockTradingProto";

service StockTradingService {

  // Unary RPC - Fetch current stock price
  rpc GetStockPrice (StockRequest) returns (StockResponse);

//  // Server Streaming RPC - Stream real-time stock prices
//  rpc SubscribeStockPrice (StockRequest) returns (stream StockResponse);
//
//  // Client Streaming RPC - Place multiple stock orders
//  rpc PlaceBulkOrder (stream StockOrder) returns (OrderSummary);
//
//  // Bidirectional Streaming RPC - Real-time trading communication
//  rpc LiveTrading (stream TradeRequest) returns (stream TradeResponse);
}

message StockRequest {
  string stock_symbol = 1;
}

message StockResponse {
  string stock_symbol = 1;
  double price = 2;
  string timestamp = 3;
}

//message StockOrder {
//  string order_id = 1;
//  string stock_symbol = 2;
//  int32 quantity = 3;
//  double price = 4;
//  string order_type = 5; // BUY or SELL
//}

//message OrderSummary {
//  int32 total_orders = 1;
//  double total_amount = 2;
//  int32 success_count = 3;
//}
//
//message TradeRequest {
//  string trade_id = 1;
//  string action = 2; // BUY, SELL, CANCEL
//  string stock_symbol = 3;
//  int32 quantity = 4;
//}
//
//message TradeResponse {
//  string trade_id = 1;
//  string status = 2; // SUCCESS, PENDING, FAILED
//  string message = 3;
//}
